# yak

./: .run-clang-format  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  doxygen.config  package.xml
.docker/bionic/cuda10.2/: Dockerfile
.docker/bionic/cuda9.2/: Dockerfile
.docker/xenial/cuda10.2/: Dockerfile
.docker/xenial/cuda9.2/: Dockerfile
.github/ISSUE_TEMPLATE/: yak-issue.md
.github/workflows/: api_docs.yml  main.yml
docs/: custom.css
include/kinfu_ros/kfusion/cuda/: device_array.hpp  kernel_containers.hpp
include/kinfu_ros/ros/: kinfu_server.h  ros_rgbd_camera.hpp
include/yak/kfusion/: kinfu.hpp  types.hpp
include/yak/kfusion/cuda/: device_memory.hpp  imgproc.hpp  tsdf_volume.hpp
include/yak/ros/: kinfu_server.h
launch/: launch_big.launch  launch_default.launch  launch_default_2.launch  launch_ensenso.launch  launch_sim.launch  launch_small.launch  launch_wheel.launch  launch_xtion.launch  start_dataset.launch
msg/: SparseTSDF.msg  TSDF.msg
nbv_planner/: CMakeLists.txt  package.xml
nbv_planner/config/: yak.rviz
nbv_planner/include/nbv_planner/: exploration_controller_node.hpp  nbv_planner_node.hpp  octomap_reset_node.hpp
nbv_planner/launch/: auto_explore.launch  launch_check.launch  octomap_mapping.launch
nbv_planner/src/: exploration_controller_node.cpp  nbv_planner_node.cpp  octomap_reset_node.cpp
nbv_planner/srv/: GetNBV.srv
nbv_robots/abb/godel_irb2400/godel_irb2400_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
nbv_robots/abb/godel_irb2400/godel_irb2400_moveit_config/config/: fake_controllers.yaml  irb2400_workspace.srdf  kinematics.yaml  ompl_planning.yaml
nbv_robots/abb/godel_irb2400/godel_irb2400_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  irb2400_calib_planning_context.launch  irb2400_robot_ftp_interface.launch  irb2400_workspace_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
nbv_robots/abb/godel_irb2400/godel_irb2400_support/: CMakeLists.txt  package.xml
nbv_robots/abb/godel_irb2400/godel_irb2400_support/config/: blending_plan.yaml  plugins.yaml  point_cloud_descriptions.yaml  robot_scan.yaml  scan_plan.yaml  surface_detection.yaml
nbv_robots/abb/godel_irb2400/godel_irb2400_support/launch/: irb2400_blending.launch
nbv_robots/abb/godel_irb2400/godel_irb2400_support/rviz/: irb2400_blending.rviz
nbv_robots/abb/godel_irb2400/godel_irb2400_support/urdf/: irb2400_workspace.xacro  swri_demo_cell_macro.xacro
nbv_robots/blending_end_effector/: CMakeLists.txt  package.xml
nbv_robots/blending_end_effector/config/: robot_state_visualize.rviz
nbv_robots/blending_end_effector/launch/: blending_end_effector.launch
nbv_robots/blending_end_effector/meshes/collision/: EE_and_Tool_Changer_convex_hull.STL  adapter_tube_convex_hull.STL
nbv_robots/blending_end_effector/meshes/visual/: Adapter_Tube.STL  Blending_Tool.STL  Ensenso.STL  Laser_Sensor.STL  Tool_Mounting_Plate.STL
nbv_robots/blending_end_effector/urdf/: blending_eef.urdf  blending_eff_macro.xacro
src/: core.cpp  imgproc.cpp  kinfu.cpp  kinfu_node.cpp  meshing_node.cpp  precomp.cpp  precomp.hpp  projective_icp.cpp
src/cuda/: proj_icp.cu  temp_utils.hpp
src/ros/: kinfu_server.cpp  ros_rgbd_camera.cpp
yak/: CMakeLists.txt  package.xml
yak/cmake/: cmake_uninstall.cmake.in  yak-config.cmake.in
yak/include/yak/: yak_server.h
yak/include/yak/kfusion/: exports.hpp  half.hpp  internal.hpp  kinfu.hpp  precomp.hpp  safe_call.hpp  tsdf_container.h  types.hpp
yak/include/yak/kfusion/cuda/: device.hpp  device_array.hpp  device_memory.hpp  imgproc.hpp  kernel_containers.hpp  projective_icp.hpp  temp_utils.hpp  texture_binder.hpp  tsdf_volume.hpp
yak/include/yak/mc/: marching_cubes.h
yak/include/yak/offline/: offline_fusion_server.h  test_file.h  tsdf_container.h
yak/include/yak/ros/: kinfu_server.h  offline_fusion.h  ros_rgbd_camera.hpp  ros_sim_camera.hpp  yak_server.h
yak/launch/: launch_big.launch  launch_default.launch  launch_default_2.launch  launch_ensenso.launch  launch_ensenso_big.launch  launch_sim.launch  launch_small.launch  launch_tiny.launch  launch_wheel.launch  launch_xtion.launch  launch_xtion_big.launch  launch_xtion_robot.launch  octomap_mapping.launch  start_data_record.launch  start_my_dataset.launch
yak/src/: core.cpp  device_memory.cpp  imgproc.cpp  internal.hpp  kinfu.cpp  kinfu_node.cpp  precomp.cpp  projective_icp.cpp  safe_call.hpp  tsdf_container.cpp  tsdf_volume.cpp  yak_server.cpp
yak/src/cuda/: device.hpp  imgproc.cu  proj_icp.cu  texture_binder.hpp  tsdf_volume.cu
yak/src/kfusion/: core.cpp  device_memory.cpp  imgproc.cpp  kinfu.cpp  precomp.cpp  projective_icp.cpp  tsdf_container.cpp  tsdf_volume.cpp
yak/src/mc/: marching_cubes.cpp  marching_cubes.h  marching_cubes_tables.cpp  marching_cubes_tables.h  marching_cubes_tests.cpp
yak/src/offline/: offline_fusion_server.cpp  test_file.cpp  tsdf_container.cpp
yak/src/ros/: kinfu_node.cpp  kinfu_server.cpp  offline_fusion.cpp  ros_rgbd_camera.cpp  ros_sim_camera.cpp  tsdf_tests.cpp  volume_marker.cpp  volume_tf_broadcaster.cpp  yak_server.cpp
yak/src/test/: tsdf_tests.cpp
yak/srv/: GetMesh.srv  GetSparseTSDF.srv  GetTSDF.srv
yak/test/: CMakeLists.txt  marching_cubes_tests.cpp
yak_ext/: CMakeLists.txt  package.xml
yak_meshing/: CMakeLists.txt  package.xml
yak_meshing/src/: yak_meshing_node.cpp
yak_meshing/srv/: GetMesh.srv
