<?xml version="1.0"?>
<package format="2">
  <name>yak</name>
  <version>0.0.0</version>
  <description>A truncated signed distance field(TSDF) to mesh tool</description>
  <author email="Joseph.Schornak@SwRI.org">schornakj</author>
  <author email="Austin.Deric@SwRI.org">AustinDeric</author>
  <maintainer email="Austin.Deric@SwRI.org">AustinDeric</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>cpu_tsdf</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>

</package>
