<?xml version="1.0"?>
<package format="2">
  <name>nbv_planner</name>
  <version>0.0.0</version>
  <description>The nbv_planner package</description>

  <maintainer email="austin.deric@gmail.com">AustinDeric</maintainer>
  <maintainer email="jschornak@swri.org">joe</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>octomap</depend>
  <depend>octomap_ros</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pcl_ros</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
