<?xml version="1.0"?>
<package format="3">
  <name>yak</name>
  <version>0.2.0</version>
  <description>A library for working with Truncated Signed Distance Fields (TSDFs).</description>
  <author email="Joseph.Schornak@SwRI.org">Joseph Schornak</author>
  <author>Jonathan Meyer</author>
  <maintainer email="Joseph.Schornak@SwRI.org">Joseph Schornak</maintainer>
  <license>MIT</license>

  <depend>libpcl-all-dev</depend>
  <depend>OpenMP</depend>
  <depend>eigen</depend>
  <depend>CUDA</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
