<?xml version="1.0"?>
<package format="3">
  <name>yak</name>
  <version>0.2.0</version>
  <description>A library for working with Truncated Signed Distance Fields (TSDFs).</description>
  <author email="Joseph.Schornak@SwRI.org">Joseph Schornak</author>
  <author>Jonathan Meyer</author>
  <maintainer email="Joseph.Schornak@SwRI.org">Joseph Schornak</maintainer>
  <license>MIT</license>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>
  <depend>nvidia-cuda-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>libomp-dev</depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
