<?xml version="1.0"?>
<package format="2">
  <name>yak_ext</name>
  <version>0.1.0</version>
  <description>Provides external libraries for Yak.</description>
  <maintainer email="joseph.schornak@swri.org">Joseph Schornak</maintainer>
  <author email="joseph.schornak@swri.org">Joseph Schornak</author>
  <license>Apache 2.0</license>
  <depend>cmake_common_scripts</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
