<?xml version="1.0"?>
<package format="2">
  <name>blending_end_effector</name>
  <version>0.1.0</version>
  <description>
    URDF robot description model for the blending end effector
  </description>

  <maintainer email="jmeyer@swri.org">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>industrial_robot_client</exec_depend>

</package>
